@@ -1,5 +1,12 @@
 2006-02-24  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/gdmconfig.c: Fix error message that is printed when
+	  ServAuthDir isn't owned by root:gid so it says "root:gid"
+	  instead of "gdm:gdm", which is wrong.  Cleaned up the 
+	  code a bit.
+
+2006-02-24  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmconfig.c, gui/gdmsetup.c: Clean up memory handling.
 	
 2006-02-21  Brian Cameron  <brian.cameron@sun.com>
